2025-03-14T01:04:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13847690039 # 593
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-14
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 476 869 / 493 886
* notice: next accum: outdated-unq outdated-all / unq all: 479 872 / 494 887
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-27 2025-02-28] / [2025-03-13]

2025-03-13T01:05:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13824709892 # 592
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-13
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 476 869 / 492 885
* notice: next accum: outdated-unq outdated-all / unq all: 476 869 / 493 886
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-27 2025-03-12]

2025-03-12T01:04:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13801378295 # 591
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-12
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 475 868 / 491 884
* notice: next accum: outdated-unq outdated-all / unq all: 476 869 / 492 885
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-26] / [2025-03-11]

2025-03-11T01:05:00Z: