@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-03-14T01:04:18Z",
+  "timestamp" : "2025-03-15T01:03:37Z",
   "count_outdated" : 872,
   "uniques_outdated" : 479,
-  "count" : 887,
-  "uniques" : 494,
+  "count" : 888,
+  "uniques" : 495,
   "clones" : [
     {
       "timestamp": "2025-03-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-03-02T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-03-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
