@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2025-03-01T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-03-02T00:00:00Z",
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2025-03-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-14T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
